--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "jianmu-docs",
-  "version": "2.2.0-beta.2",
+  "version": "2.2.0",
   "repository": "https://gitee.com/jianmu-dev/jianmu-docs.git",
   "scripts": {
     "dev": "vitepress dev",
